--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   },
   "devDependencies": {
     "@types/react-dom": "^19.0.3",
+    "tailwindcss": "^3.4.17",
     "typescript": "^4.9.5"
   }
 }
